Striver A2z - XOR sum equals K

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -517,6 +517,7 @@
      "iopub.status.idle": "2024-03-12T17:22:44.946676Z",
      "shell.execute_reply": "2024-03-12T17:22:44.945944Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011878,
      "end_time": "2024-03-12T17:22:44.948270",
@@ -537,6 +538,64 @@
     "for i in range(50):\n",
     "    i, j = sorted([random.randint(1, 50), random.randint(1, 50)], reverse=True)\n",
     "    assert math.comb(i, j) == nCr(i, j), f\"failed for {i, j}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a10c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4Sum\n",
+    "class Solution:\n",
+    "    def fourSum(self, arr: list[int], target: int) -> set[tuple[int]]:\n",
+    "        def update_until(idx: int, update: int, until: int):\n",
+    "            temp_idx = idx\n",
+    "            assert update != 0\n",
+    "            if update > 0:\n",
+    "                while temp_idx < until and arr[temp_idx] == arr[idx]:\n",
+    "                    temp_idx += update\n",
+    "            else:\n",
+    "                while temp_idx > until and arr[temp_idx] == arr[idx]:\n",
+    "                    temp_idx += update\n",
+    "            return temp_idx\n",
+    "\n",
+    "        N = len(arr)\n",
+    "        arr.sort()\n",
+    "        result: set[tuple[int]] = set()\n",
+    "        i = 0\n",
+    "        while i < N - 3:\n",
+    "            j = i + 1\n",
+    "            while j < N - 2:\n",
+    "                k, l = j + 1, N - 1\n",
+    "                while k < l:\n",
+    "                    curr = arr[i], arr[j], arr[k], arr[l]\n",
+    "                    if sum(curr) == target:\n",
+    "                        result.add(curr)\n",
+    "                        # Increment k, l\n",
+    "                        k_, l_ = k, l\n",
+    "                        while k_ < l_ and arr[k_] == arr[k] and arr[l_] == arr[l]:\n",
+    "                            k_, l_ = k_ + 1, l_ - 1\n",
+    "                        k, l = k_, l_\n",
+    "                    elif sum(curr) < target:\n",
+    "                        # Increment k\n",
+    "                        k = update_until(k, 1, l)\n",
+    "                    else:\n",
+    "                        # Decrement l\n",
+    "                        l = update_until(l, -1, k)\n",
+    "\n",
+    "                # Increment j\n",
+    "                j = update_until(j, 1, N - 2)\n",
+    "\n",
+    "            # Increment i\n",
+    "            i = update_until(i, 1, N - 3)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().fourSum([1,0,-1,0,-2,2], 0) == {(-2,-1,1,2), (-2,0,0,2), (-1,0,0,1)}\n",
+    "assert Solution().fourSum([2,2,2,2,2], 8) == {(2, 2, 2, 2)}"
    ]
   }
  ],
