--- a/study/striver-A2Z/08-hard-arrays.ipynb
+++ b/study/striver-A2Z/08-hard-arrays.ipynb
@@ -42,7 +42,8 @@
     "import math\n",
     "import random\n",
     "import functools\n",
-    "import itertools"
+    "import itertools\n",
+    "import pdb"
    ]
   },
   {
@@ -549,6 +550,59 @@
     "                k += 1\n",
     "            else:\n",
     "                l -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af7c5ce6",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=eZr-6p0B7ME&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=38\n",
+    "Number of subarrays with sum xor K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e41d8af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute force - O(N^2)\n",
+    "arr = [4, 2, 2, 6, 4]\n",
+    "K = 6\n",
+    "N, count = len(arr), 0\n",
+    "for i in range(N):\n",
+    "    sum_ = 0\n",
+    "    for j in range(i, N):\n",
+    "        sum_ = sum_ ^ arr[j]\n",
+    "        if sum_ == K:\n",
+    "            count += 1\n",
+    "\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0399a91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal: Using prefix sum\n",
+    "# Time: O(N), Space: O(N)\n",
+    "arr = [4, 2, 2, 6, 4]\n",
+    "K = 6\n",
+    "N, count = len(arr), 0\n",
+    "dict_: dict[int, int] = {0: 1}\n",
+    "sum_ = 0\n",
+    "for i in range(N):\n",
+    "    sum_ = sum_ ^ arr[i]\n",
+    "    if K ^ sum_ in dict_:\n",
+    "        count += dict_[K ^ sum_]\n",
+    "    dict_[sum_] = dict_.get(sum_, 0) + 1\n",
+    "\n",
+    "count"
    ]
   }
  ],
