Striver A2Z: Merge overlapping intervals, Merge sorted arrays

--- a/study/striver-A2Z/08-hard-arrays.ipynb
+++ b/study/striver-A2Z/08-hard-arrays.ipynb
@@ -665,6 +665,137 @@
     "\n",
     "count"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb45d7f",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=IexN60k62jo&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=39\n",
+    "Merge overlapping intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dacfc2ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal force - O(N log N) + O(N)\n",
+    "arr: list[tuple[int, int]] = [(1, 3), (2, 6), (8, 9), (9, 11), (8, 10), (2, 4), (15, 18), (16, 17)]\n",
+    "arr.sort(key=lambda x: x[0])\n",
+    "result: list[tuple[int, int]] = []\n",
+    "for i, j in arr:\n",
+    "    while len(result) > 0 and result[-1][1] >= i:\n",
+    "        prev = result.pop()\n",
+    "        i = min(prev[0], i)\n",
+    "        j = max(prev[1], j)\n",
+    "    result.append((i, j))\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10c671b2",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=n7uwj04E0I4&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=41\n",
+    "Merge two sorted arrays without extra space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd69784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute force, extra O(M) space\n",
+    "arr1 = [1, 3, 5, 7]\n",
+    "arr2 = [0, 2, 6, 8, 9]\n",
+    "N1, N2 = len(arr1), len(arr2)\n",
+    "\n",
+    "# Allocate extra space\n",
+    "for i in range(N2):\n",
+    "    arr1.append(None)\n",
+    "\n",
+    "# Merge arrays\n",
+    "i, j, k = N1 - 1, N2 - 1, N1 + N2 - 1\n",
+    "while i >= 0 or j >= 0:\n",
+    "    if j < 0 or (i >= 0 and arr1[i] >= arr2[j]):\n",
+    "        arr1[k] = arr1[i]\n",
+    "        k, i = k - 1, i - 1\n",
+    "    else:\n",
+    "        arr1[k] = arr2[j]\n",
+    "        k, j = k - 1, j - 1\n",
+    "\n",
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f72f3592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal 1\n",
+    "arr1 = [1, 3, 5, 7]\n",
+    "arr2 = [0, 2, 6, 8, 9]\n",
+    "N1, N2 = len(arr1), len(arr2)\n",
+    "\n",
+    "# Merge arrays\n",
+    "i, j = N1 - 1, 0\n",
+    "while arr1[i] > arr2[j]:\n",
+    "    arr1[i], arr2[j] = arr2[j], arr1[i]\n",
+    "    i, j = i - 1, j + 1\n",
+    "\n",
+    "arr1.sort()\n",
+    "arr2.sort()\n",
+    "arr1 + arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f567f80c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal 2, shell sort\n",
+    "arr1 = [1, 3, 5, 7, 10]\n",
+    "arr2 = [0, 2, 6, 8, 9]\n",
+    "N1, N2 = len(arr1), len(arr2)\n",
+    "\n",
+    "gap = math.ceil((N1 + N2) / 2)\n",
+    "while gap > 0:\n",
+    "    left, right = 0, gap\n",
+    "    while right < N1 + N2:\n",
+    "        # arr1, arr2\n",
+    "        if left < N1 and right >= N1:\n",
+    "            l, r = left, right - N1\n",
+    "            a1, a2 = arr1, arr2\n",
+    "        # arr1, arr1\n",
+    "        elif right < N1:\n",
+    "            l, r = left, right\n",
+    "            a1, a2 = arr1, arr1\n",
+    "        # arr2, arr2\n",
+    "        else:\n",
+    "            l, r = left - N1, right - N1\n",
+    "            a1, a2 = arr2, arr2\n",
+    "\n",
+    "        if a1[l] > a2[r]:\n",
+    "            a1[l], a2[r] = a2[r], a1[l]\n",
+    "        left, right = left + 1, right + 1\n",
+    "\n",
+    "    if gap == 1:\n",
+    "        break\n",
+    "    gap = math.ceil(gap / 2)\n",
+    "\n",
+    "arr1 + arr2"
+   ]
   }
  ],
  "metadata": {
