Striver A2Z: Find missing and repeating element

--- a/study/striver-A2Z/08-hard-arrays.ipynb
+++ b/study/striver-A2Z/08-hard-arrays.ipynb
@@ -918,6 +918,146 @@
     "\n",
     "arr1 + arr2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "520fb0ad",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=2D0D8HE6uak&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=41\n",
+    "Find the missing the repeating number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e488ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute Force, Space - O(n), Time - O(1)\n",
+    "arr = [4, 3, 6, 2, 1, 1]\n",
+    "N = len(arr)\n",
+    "\n",
+    "set_: set[int] = set()\n",
+    "sum_ = 0\n",
+    "for i in arr:\n",
+    "    if i not in set_:\n",
+    "        sum_ += i\n",
+    "        set_.add(i)\n",
+    "    else:\n",
+    "        j = i\n",
+    "\n",
+    "# Repeat, Missing\n",
+    "j, ((N * (N + 1)) / 2) - sum_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fcff761",
+   "metadata": {},
+   "source": [
+    "Mathematical approach:\n",
+    "```\n",
+    "  First Equation:\n",
+    "  sum_of_array_elements - sum_of_N_natural_numbers = repeat - missing\n",
+    "\n",
+    "  Second Equation:\n",
+    "  sum_of_squares_of_array_elements - sum_of_squares_of_N_Natural_numbers = (repeat^2 - missing^2)\n",
+    "  => (repeat - missing)(repeat + missing)\n",
+    "\n",
+    "  => repeat = ((eq2 / eq1) + eq1) / 2\n",
+    "  => missing = repeat - eq1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79447097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal - 1\n",
+    "arr = [4, 3, 6, 2, 1, 1]\n",
+    "N = len(arr)\n",
+    "\n",
+    "expected_sum, expected_sum_of_squares = 0, 0\n",
+    "for i in range(1, N + 1):\n",
+    "    expected_sum += i\n",
+    "    expected_sum_of_squares += i * i\n",
+    "\n",
+    "sum_, sum_of_squares = 0, 0\n",
+    "for i in arr:\n",
+    "    sum_ += i\n",
+    "    sum_of_squares += i * i\n",
+    "\n",
+    "eq1 = sum_ - expected_sum\n",
+    "eq2 = sum_of_squares - expected_sum_of_squares\n",
+    "\n",
+    "repeat = ((eq2 / eq1) + eq1) / 2\n",
+    "repeat, repeat - eq1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558572e0",
+   "metadata": {},
+   "source": [
+    "XOR method\n",
+    "1. XOR all nums and xor with numbers from 1 to N, result = repeat ^ missing\n",
+    "2. Find right most differentiating bit from prev result\n",
+    "3. Iterate through 1 to N and all elements in arr, XORing them and group them based on the differenting bit\n",
+    "4. Since the repeat, missing comes up odd number of times - one of the group result would be repeat and the other missing\n",
+    "5. Iterate through array and verify which is which"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e5b861f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [4, 3, 6, 2, 1, 1]\n",
+    "N = len(arr)\n",
+    "\n",
+    "xr = 0\n",
+    "for i in arr:\n",
+    "    xr ^= i\n",
+    "for i in range(1, N + 1):\n",
+    "    xr ^= i\n",
+    "\n",
+    "# This can be replaced by using the left shift / right shift operators\n",
+    "xr_bin = bin(xr)[2:]\n",
+    "diff_bit_pos = len(xr_bin) - xr_bin.rfind('1')\n",
+    "\n",
+    "diff_bit_0, diff_bit_1 = 0, 0\n",
+    "for i in arr:\n",
+    "    curr = bin(i)\n",
+    "    if len(curr) < diff_bit_pos or curr[-diff_bit_pos] == '0':\n",
+    "        diff_bit_0 ^= i\n",
+    "    else:\n",
+    "        diff_bit_1 ^= i\n",
+    "for i in range(1, N + 1):\n",
+    "    curr = bin(i)\n",
+    "    if len(curr) < diff_bit_pos or curr[-diff_bit_pos] == '0':\n",
+    "        diff_bit_0 ^= i\n",
+    "    else:\n",
+    "        diff_bit_1 ^= i\n",
+    "\n",
+    "for i in arr:\n",
+    "    if i == diff_bit_0:\n",
+    "        missing = diff_bit_1\n",
+    "        repeat = diff_bit_0\n",
+    "        break\n",
+    "    elif i == diff_bit_1:\n",
+    "        missing = diff_bit_0\n",
+    "        repeat = diff_bit_1\n",
+    "        break\n",
+    "\n",
+    "repeat, missing"
+   ]
   }
  ],
  "metadata": {
