Striver A2Z arrays completed, LC weekly contest

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -551,6 +551,7 @@
      "iopub.status.idle": "2024-03-14T16:34:32.761328Z",
      "shell.execute_reply": "2024-03-14T16:34:32.760585Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018226,
      "end_time": "2024-03-14T16:34:32.762980",
@@ -611,6 +612,100 @@
     "# Testing the solution\n",
     "assert Solution().fourSum([1,0,-1,0,-2,2], 0) == {(-2,-1,1,2), (-2,0,0,2), (-1,0,0,1)}\n",
     "assert Solution().fourSum([2,2,2,2,2], 8) == {(2, 2, 2, 2)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d584c67",
+   "metadata": {},
+   "source": [
+    "Leetcode Weekly contest - 17th March"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ff1d0a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isSubstringPresent(self, s: str) -> bool:\n",
+    "        rev_ = \"\".join(list(reversed(s)))\n",
+    "        N = len(s)\n",
+    "        for i in range(N - 1):\n",
+    "            if s[i:i+2] in rev_:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().isSubstringPresent(\"leetcode\") == True\n",
+    "assert Solution().isSubstringPresent(\"abcd\") == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeb795a8",
+   "metadata": {},
+   "source": [
+    "zz - z, z, zz (3)\n",
+    "zzz - z, z, z, zz, zz, zzz (6)\n",
+    "zzzz - z, z, z, z; zz, zz, zz, zzz, zzz, zzzz (10)\n",
+    "zzzzz - z, z, z, z, z, zz, zz, zz, zz, zzz, zzz, zzz, zzzz, zzzz, zzzzz (15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e21989e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countSubstrings(self, s: str, c: str) -> int:\n",
+    "        count = 0\n",
+    "        for ch in s:\n",
+    "            if ch == c:\n",
+    "                count += 1\n",
+    "        return (count * (count + 1)) / 2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countSubstrings(\"abada\", \"a\") == 6\n",
+    "assert Solution().countSubstrings(\"zzz\", \"z\") == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71dd8ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minimumDeletions(self, word: str, k: int) -> int:\n",
+    "        freq: list[int] = sorted(collections.Counter(word).values())\n",
+    "        N = len(freq)\n",
+    "\n",
+    "        result = math.inf\n",
+    "        sum_ = 0\n",
+    "        for i in range(N):\n",
+    "            sum_ += freq[i - 1] if i > 0 else 0\n",
+    "            curr_ = 0\n",
+    "            for j in range(i + 1, N):\n",
+    "                if freq[j] - freq[i] > k:\n",
+    "                    curr_ += freq[j] - freq[i] - k\n",
+    "            result = min(curr_ + sum_, result)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().minimumDeletions(\"aabcaba\", 0) == 3\n",
+    "assert Solution().minimumDeletions(\"dabdcbdcdcd\", 2) == 2\n",
+    "assert Solution().minimumDeletions(\"aaabaaa\", 2) == 1"
    ]
   }
  ],
