--- a/study/striver-A2Z/05-sorting.ipynb
+++ b/study/striver-A2Z/05-sorting.ipynb
@@ -235,7 +235,9 @@
    },
    "outputs": [],
    "source": [
-    "# Merge Sort - With aux space\n",
+    "# Merge Sort - With aux space, O(N log N)\n",
+    "# With O(N) space is possible, if we created a temp arr and assigned values from temp back to array\n",
+    "# At any point in time, we would only take up O(N) space\n",
     "def merge_sort(arr: list[int]) -> list[int]:\n",
     "    \"\"\"\n",
     "    Average, Best, Worst - O(N log N)\n",
