--- a/study/striver-A2Z/08-hard-arrays.ipynb
+++ b/study/striver-A2Z/08-hard-arrays.ipynb
@@ -1163,6 +1163,230 @@
     "\n",
     "repeat, missing"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56ac4d0b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=AseUmwVNaoY&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=42\n",
+    "Count Inversions in an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a103651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute force, Time - O(N^2), Space - O(1)\n",
+    "arr = [5, 3, 2, 4, 1]\n",
+    "N = len(arr)\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(N - 1):\n",
+    "    for j in range(i, N):\n",
+    "        if arr[i] > arr[j]:\n",
+    "            count += 1\n",
+    "\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56fd8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal, Time - O(N Log N), Space - O(N)\n",
+    "def countInversionPairs(arr: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    1. Sort the array using merge sort\n",
+    "    2. While merging, count the inversion pairs using O(m + n) algorithm\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def mergeSort_(low: int, high: int) -> int:\n",
+    "        if low >= high:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            mid = (low + high + 1) // 2\n",
+    "            left_count = mergeSort_(low, mid - 1)\n",
+    "            right_count = mergeSort_(mid, high)\n",
+    "            temp: list[int] = []\n",
+    "            count = 0\n",
+    "            i, j = low, mid\n",
+    "            while i < mid or j <= high:\n",
+    "                if (j > high) or (i < mid and arr[i] <= arr[j]):\n",
+    "                    temp.append(arr[i])\n",
+    "                    i += 1\n",
+    "                else:\n",
+    "                    temp.append(arr[j])\n",
+    "                    j += 1\n",
+    "\n",
+    "                    # Each time we add from right, it means that all elements on the left are greater\n",
+    "                    # Increase count by len of elements on the left\n",
+    "                    count += mid - i\n",
+    "\n",
+    "            # Copy from temp array to actual array\n",
+    "            arr[low: high + 1] = temp\n",
+    "\n",
+    "            return count + left_count + right_count\n",
+    "\n",
+    "    count = mergeSort_(0, len(arr) - 1)\n",
+    "    return count\n",
+    "\n",
+    "assert countInversionPairs([5, 3, 2, 4, 1]) == 8\n",
+    "assert countInversionPairs([4, 3, 2, 1]) == 6\n",
+    "assert countInversionPairs([1, 20, 6, 4, 5]) == 5\n",
+    "assert countInversionPairs([15, 28, 11, 20, 14, 7, 14, 2, 15, 4, 22, 19, 17, 1, 26, 6, 20, 2, 6]) == 96"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58d05c9c",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=0e4bZaP3MDI&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=43"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95da4636",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force, Time - O(N^2), Space - O(1)\n",
+    "arr = [40, 25, 19, 12, 9, 6, 2]\n",
+    "N = len(arr)\n",
+    "\n",
+    "count = 0\n",
+    "for i in range(N):\n",
+    "    for j in range(i + 1, N):\n",
+    "        if arr[i] > 2 * arr[j]:\n",
+    "            count += 1\n",
+    "\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90b8bcd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal, Time - O(N log N)\n",
+    "def countReversePairs(arr: list[int]) -> int:\n",
+    "    def merge_sort_(low: int, high: int) -> int:\n",
+    "        if low >= high:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            mid = (low + high + 1) // 2\n",
+    "            left_count = merge_sort_(low, mid - 1)\n",
+    "            right_count = merge_sort_(mid, high)\n",
+    "            count = 0\n",
+    "\n",
+    "            # Merge the arrays into a temp array\n",
+    "            temp: list[int] = []\n",
+    "            i, j = low, mid\n",
+    "            k = low # keep track of idx on left starting with arr[k] > 2 * arr[j]\n",
+    "            while i < mid or j <= high:\n",
+    "                if j > high or (i < mid and arr[i] <= arr[j]):\n",
+    "                   temp.append(arr[i])\n",
+    "                   i += 1\n",
+    "                else:\n",
+    "                    temp.append(arr[j])\n",
+    "                    j += 1\n",
+    "\n",
+    "                    # Count the pairs\n",
+    "                    while k < mid and arr[k] <= 2 * arr[j - 1]:\n",
+    "                        k += 1\n",
+    "\n",
+    "                    count += mid - k\n",
+    "\n",
+    "            # Copy elements from temp into arr\n",
+    "            arr[low: high + 1] = temp\n",
+    "\n",
+    "            return left_count + right_count + count\n",
+    "\n",
+    "    count = merge_sort_(0, len(arr) - 1)\n",
+    "    return count\n",
+    "\n",
+    "countReversePairs([40, 25, 19, 12, 9, 6, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cdfb391",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=hnswaLJvr6g&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=45\n",
+    "Maximum product subarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf22ac2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force, Time - O(N^2), Space - O(1)\n",
+    "arr = [2, 3, -2, 4]\n",
+    "N = len(arr)\n",
+    "\n",
+    "max_ = -math.inf\n",
+    "for i in range(N):\n",
+    "    prod = 1\n",
+    "    for j in range(i, N):\n",
+    "        prod *= arr[j]\n",
+    "        if prod > max_:\n",
+    "            max_ = prod\n",
+    "\n",
+    "max_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114f1f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal\n",
+    "# When all +ve is simply prod of all nums\n",
+    "# When array contains negatives, result would need to exclude a single negative (either product of prefix or suffix)\n",
+    "# When array contains 0, we treat it as a demarcation point\n",
+    "class Solution:\n",
+    "    def maxProduct(self, nums: list[int]) -> int:\n",
+    "        N = len(nums)\n",
+    "\n",
+    "        prefix, suffix, max_ = 1, 1, -math.inf\n",
+    "        for i in range(N):\n",
+    "            j = N - i - 1\n",
+    "\n",
+    "            prefix *= nums[i]\n",
+    "            suffix *= nums[j]\n",
+    "\n",
+    "            max_ = max(max_, prefix, suffix)\n",
+    "\n",
+    "            if prefix == 0:\n",
+    "                prefix = 1\n",
+    "\n",
+    "            if suffix == 0:\n",
+    "                suffix = 1\n",
+    "\n",
+    "        return int(max_)\n",
+    "\n",
+    "Solution().maxProduct([2, 3, -2, 0, 4])"
+   ]
   }
  ],
  "metadata": {
