--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db5bf785",
+   "id": "d1410f7f",
    "metadata": {
     "papermill": {
-     "duration": 0.002329,
-     "end_time": "2024-03-19T03:03:34.916437",
+     "duration": 0.005195,
+     "end_time": "2024-03-20T03:25:59.358627",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.914108",
+     "start_time": "2024-03-20T03:25:59.353432",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "Some useful imports"
@@ -19,24 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "671e1a3f",
+   "execution_count": null,
+   "id": "fd0fe7ed",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-19T03:03:34.921739Z",
-     "iopub.status.busy": "2024-03-19T03:03:34.921267Z",
-     "iopub.status.idle": "2024-03-19T03:03:34.934691Z",
-     "shell.execute_reply": "2024-03-19T03:03:34.934020Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.018098,
-     "end_time": "2024-03-19T03:03:34.936429",
+     "duration": 0.023903,
+     "end_time": "2024-03-20T03:25:59.387324",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.918331",
+     "start_time": "2024-03-20T03:25:59.363421",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -50,16 +42,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc657ea",
+   "id": "8ad30d2a",
    "metadata": {
     "papermill": {
-     "duration": 0.001636,
-     "end_time": "2024-03-19T03:03:34.939768",
+     "duration": 0.004308,
+     "end_time": "2024-03-20T03:25:59.396146",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.938132",
+     "start_time": "2024-03-20T03:25:59.391838",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "source": [
     "Video Link: https://www.youtube.com/watch?v=MHf6awe89xw&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=45"
@@ -67,24 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1f233f2d",
+   "execution_count": null,
+   "id": "0719094e",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-19T03:03:34.944206Z",
-     "iopub.status.busy": "2024-03-19T03:03:34.943860Z",
-     "iopub.status.idle": "2024-03-19T03:03:34.948247Z",
-     "shell.execute_reply": "2024-03-19T03:03:34.947481Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.008504,
-     "end_time": "2024-03-19T03:03:34.949898",
+     "duration": 0.012957,
+     "end_time": "2024-03-20T03:25:59.413342",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.941394",
+     "start_time": "2024-03-20T03:25:59.400385",
      "status": "completed"
-    },
-    "tags": []
+    }
    },
    "outputs": [],
    "source": [
@@ -99,50 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ea84f278",
+   "execution_count": null,
+   "id": "328d499d",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-19T03:03:34.954681Z",
-     "iopub.status.busy": "2024-03-19T03:03:34.954139Z",
-     "iopub.status.idle": "2024-03-19T03:03:34.968738Z",
-     "shell.execute_reply": "2024-03-19T03:03:34.967954Z"
-    },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.018884,
-     "end_time": "2024-03-19T03:03:34.970567",
+     "duration": 0.042149,
+     "end_time": "2024-03-20T03:25:59.460942",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.951683",
+     "start_time": "2024-03-20T03:25:59.418793",
      "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████| 100/100 [00:00<00:00, 63772.30it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Iterative solution\n",
     "def bsearch_iter(arr: list[int], target: int) -> int:\n",
@@ -168,49 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e4e7cc25",
+   "execution_count": null,
+   "id": "9e6cb028",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-19T03:03:34.976114Z",
-     "iopub.status.busy": "2024-03-19T03:03:34.975480Z",
-     "iopub.status.idle": "2024-03-19T03:03:34.987301Z",
-     "shell.execute_reply": "2024-03-19T03:03:34.986529Z"
-    },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.016301,
-     "end_time": "2024-03-19T03:03:34.988921",
+     "duration": 0.018109,
+     "end_time": "2024-03-20T03:25:59.522188",
      "exception": false,
-     "start_time": "2024-03-19T03:03:34.972620",
+     "start_time": "2024-03-20T03:25:59.504079",
      "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████| 100/100 [00:00<00:00, 41892.77it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Recursive solution\n",
     "def bsearch_rec(arr: list[int], target: int) -> int:\n",
@@ -234,6 +157,272 @@
     "    j = random.randint(0, 45)\n",
     "    assert bsearch_rec(temp, j) == lsearch(temp, j), f\"failed for {temp}, {j}\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58c6735d",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003941,
+     "end_time": "2024-03-20T03:25:59.530144",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.526203",
+     "status": "completed"
+    }
+   },
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=6zhGS79oQ4k&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=46\n",
+    "Implement lower / bound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69b3ccc2",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.015589,
+     "end_time": "2024-03-20T03:25:59.549692",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.534103",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Lower bound with Linear Search\n",
+    "def lower_bound_linear(arr: list[int], target: int) -> int:\n",
+    "    N = len(arr)\n",
+    "    for i in range(N):\n",
+    "        if arr[i] >= target:\n",
+    "            return i\n",
+    "    return N\n",
+    "\n",
+    "lower_bound_linear([3, 5, 8, 15, 19], 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad6eebf",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.019751,
+     "end_time": "2024-03-20T03:25:59.573676",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.553925",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def lower_bound_binary(arr: list[int], target: int):\n",
+    "    N = len(arr)\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid - 1] < target and arr[mid] >= target:\n",
+    "            return mid\n",
+    "        elif arr[mid] >= target:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    else:\n",
+    "        return 0 if target <= arr[0] else N\n",
+    "\n",
+    "for i in tqdm.tqdm(range(200)):\n",
+    "    temp = random.choices(list(range(100, 200)), k=random.randint(1, 50))\n",
+    "    temp.sort()\n",
+    "    j = random.randint(95, 205)\n",
+    "    assert lower_bound_binary(temp, j) == lower_bound_linear(temp, j), f\"failed for {temp}, {j}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6073daf2",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.013593,
+     "end_time": "2024-03-20T03:25:59.591743",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.578150",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Upper bound - Brute O(N)\n",
+    "def upper_bound_linear(arr: list[int], target: int) -> int:\n",
+    "    N = len(arr)\n",
+    "    for i in range(N):\n",
+    "        if arr[i] > target:\n",
+    "            return i\n",
+    "    return N\n",
+    "\n",
+    "upper_bound_linear([3, 5, 8, 15, 19, 19], 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba0c14c0",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.021594,
+     "end_time": "2024-03-20T03:25:59.618040",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.596446",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Binary Search\n",
+    "def upper_bound_binary(arr: list[int], target: int) -> int:\n",
+    "    N = len(arr)\n",
+    "    low, high = 0, N - 1\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid] > target and arr[mid - 1] <= target:\n",
+    "            return mid\n",
+    "        elif arr[mid] <= target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "    else:\n",
+    "        return 0 if target < arr[0] else N\n",
+    "\n",
+    "for i in tqdm.tqdm(range(200)):\n",
+    "    temp = random.choices(list(range(100, 200)), k=random.randint(1, 50))\n",
+    "    temp.sort()\n",
+    "    j = random.randint(95, 205)\n",
+    "    assert upper_bound_binary(temp, j) == upper_bound_linear(temp, j), f\"failed for {temp}, {j}\"\n",
+    "\n",
+    "# Note the difference between the UB / LB\n",
+    "print(lower_bound_binary([1, 1, 1, 1, 1], 1))\n",
+    "print(upper_bound_binary([1, 1, 1, 1, 1], 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c5c8b30",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00504,
+     "end_time": "2024-03-20T03:25:59.629727",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.624687",
+     "status": "completed"
+    }
+   },
+   "source": [
+    "Much more intutive approach by Striver:\n",
+    "Retain a variable ans to N, update this variable when:\n",
+    "arr[mid] >= target - Lower bound\n",
+    "arr[mid] > target - Upper bound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2236af54",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.01433,
+     "end_time": "2024-03-20T03:25:59.648863",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.634533",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Lower bound Binary (Striver's approach)\n",
+    "def lower_bound_striver(arr: list[int], target: int) -> int:\n",
+    "    \"Smallest index, greater than or equal to target\"\n",
+    "    N = len(arr)\n",
+    "    low, high, ans = 0, N - 1, N\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid] >= target:\n",
+    "            ans = mid\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "\n",
+    "    return ans\n",
+    "\n",
+    "lower_bound_striver([1, 1, 1, 1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c96b4979",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.014844,
+     "end_time": "2024-03-20T03:25:59.669656",
+     "exception": false,
+     "start_time": "2024-03-20T03:25:59.654812",
+     "status": "completed"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Upper bound Binary (Striver's approach)\n",
+    "def upper_bound_striver(arr: list[int], target: int) -> int:\n",
+    "    \"Smallest index, greater than target\"\n",
+    "    N = len(arr)\n",
+    "    low, high, ans = 0, N - 1, N\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid] > target:\n",
+    "            ans = mid\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return ans\n",
+    "\n",
+    "upper_bound_striver([1, 1, 1, 1], 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f029f61e",
+   "metadata": {},
+   "source": [
+    "Search Insert position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5821849e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchInsert(arr: list[int], target: int) -> int:\n",
+    "    \"Lower bound - Smallest index, greater than or equal to target\"\n",
+    "    N = len(arr)\n",
+    "    low, high, ans = 0, N - 1, N\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if arr[mid] >= target:\n",
+    "            ans = mid\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "\n",
+    "    return ans"
+   ]
   }
  ],
  "metadata": {
@@ -241,30 +430,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
-  },
-  "papermill": {
-   "default_parameters": {},
-   "duration": 1.392662,
-   "end_time": "2024-03-19T03:03:35.107341",
-   "environment_variables": {},
-   "exception": null,
-   "input_path": "study/striver-A2Z/09-binary-search.ipynb",
-   "output_path": "study/striver-A2Z/09-binary-search.ipynb",
-   "parameters": {},
-   "start_time": "2024-03-19T03:03:33.714679",
-   "version": "2.5.0"
   }
  },
  "nbformat": 4,
